Store model outputs in JSONL format analogically to annotations and generations, provide backward compatibility methods

--- a/factgenie/templates/crowdsourcing_detail.html
+++ b/factgenie/templates/crowdsourcing_detail.html
@@ -92,7 +92,7 @@
                   <!-- link, open in new tab -->
                   <a href="{{ host_prefix }}/browse?dataset={{ batch.dataset }}&split={{ batch.split }}&example_idx={{ e.example_idx }}"
                     class="btn btn-outline-secondary btn-sm" target="_blank">
-                    {{ e.dataset }}-{{ e.split }}-{{ e.setup.id }}-{{ e.example_idx }}</a>
+                    {{ e.dataset }}-{{ e.split }}-{{ e.setup_id }}-{{ e.example_idx }}</a>
                   {% endfor %}
                 </div>
               </td>
