--- a/factgenie/templates/forms/save_generations_modal.html
+++ b/factgenie/templates/forms/save_generations_modal.html
@@ -7,11 +7,12 @@
             </div>
             <div class="modal-body">
                 <p>
-                    <small class="text-muted">Export the generated outputs to view them in the Browse
+                    <small class="text-muted">Exports the results as model outputs so that the results can be viewed in
+                        the Browse
                         interface.</small>
                 </p>
                 <div class="mb-3">
-                    <label for="model-name" class="form-label">Model name</label>
+                    <label for="model-name" class="form-label">Setup id</label>
                     <input type="text" class="form-control" id="save-generations-model-name" name="model_name" value="{{
                                 campaign_id }}-{{ metadata.config.model }}" required></input>
                 </div>
