--- a/factgenie/templates/llm_campaign_detail.html
+++ b/factgenie/templates/llm_campaign_detail.html
@@ -54,8 +54,7 @@
           </a>
           {% if mode == 'llm_gen' %}
           <a type="button" class="btn btn-outline-secondary" data-bs-toggle="modal" id="save-generations-button"
-            data-bs-target="#save-generations-modal" class="btn btn-outline-secondary" title="Export as model outputs"
-            {% if metadata.status!='finished' %} style="display: none;" {% endif %}>
+            data-bs-target="#save-generations-modal" class="btn btn-outline-secondary" title="Export as model outputs">
             <!-- print out metadata.status -->
             <i class="fa fa-file-text"></i> Export as model outputs
           </a>
@@ -83,8 +82,6 @@
 
         <div id="finished-examples" class="mt-3">
           <h4>Examples</h4>
-          {% if mode == 'llm_gen' %}<p><small class="text-muted">To view the outputs in the browse interface, wait until
-              all outputs are generated and export them as model outputs.</small></p>{% endif %}
           <div id="llm-status">
             <table class="table table-sm table-striped">
               <thead>
