--- a/factgenie/templates/crowdsourcing_new.html
+++ b/factgenie/templates/crowdsourcing_new.html
@@ -101,13 +101,13 @@
                 </div>
               </div>
               <!-- textarea for annotator prompt -->
-              <div class="form-group mt-3">
+              <!-- <div class="form-group mt-3">
                 <label for="annotatorPrompt">Annotator prompt</label>
                 <div class="mb-2">
                   <small class="form-text text-muted">The message shown right before the annotated text.</small>
                 </div>
                 <textarea class="form-control" id="annotatorPrompt" name="annotatorPrompt" rows="1" required></textarea>
-              </div>
+              </div> -->
               <!-- textarea for final message -->
               <div class="form-group  mt-4">
                 <label for="finalMessage">Final message</label>
