Show llm campaign status on overview page

--- a/factgenie/static/css/custom.css
+++ b/factgenie/static/css/custom.css
@@ -922,3 +922,15 @@ a:hover {
 .table-datasets {
     cursor: pointer;
 }
+
+.bg-running {
+    background-color: #2d9f2a;
+}
+
+.bg-finished {
+    background-color: #2d8392;
+}
+
+.bg-idle {
+    background-color: #cdc83c;
+}
