Updates and fixes for migration

--- a/factgenie/templates/forms/add_dataset_modal.html
+++ b/factgenie/templates/forms/add_dataset_modal.html
@@ -97,7 +97,7 @@
                     <div id="tab-custom-dataset" role="tabpanel" class="tab-pane p-3" tabindex="2">
                         <div class="alert alert-info" role="alert">
                             <p>To add a custom dataset locally, register the dataset in
-                                <code>loaders/datasets_local.yaml</code>.
+                                <code>loaders/datasets.yaml</code>.
                             </p>
 
                             <p>You can either select from pre-existing classes (see <code>loaders/basic.py</code>) or
@@ -106,7 +106,7 @@
                                 (subclassing the <code>Dataset</code> class).
                             </p>
 
-                            <p>This an example <code>datasets_local.yaml</code> file:</p>
+                            <p>This an example <code>datasets.yaml</code> file:</p>
                             <pre>
 datasets:
   my-dataset:
