Minor fixes and updates

--- a/factgenie/templates/crowdsourcing_new.html
+++ b/factgenie/templates/crowdsourcing_new.html
@@ -117,7 +117,7 @@
                 </div>
                 <select class="form-select" id="service" name="service">
                   <option value="local">Local annotators only</option>
-                  <option value="prolifc">Prolific</option>
+                  <option value="prolific">Prolific</option>
                   <option value="mturk">Amazon Mechanical Turk (beta)</option>
                 </select>
               </div>
