Unify campaign detail and overview UX, add an option to edit config

--- a/factgenie/templates/forms/config_modal.html
+++ b/factgenie/templates/forms/config_modal.html
@@ -1,15 +1,34 @@
-<div class="modal fade" id="config-modal" tabindex="-1">
+<div class="modal fade" id="config-modal-{{ metadata.id }}" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="config-modal-label">Config</h5>
+                <h5 class="modal-title" id="config-modal-label">{{ metadata.id }}</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <div id='configarea' class="tab-pane sidepanel-panel" role="tabpanel" tabindex="0">
-                    <!-- indent nicely -->
-                    <pre>{{ metadata.config | prettify_json }}</pre>
+                <!-- warning -->
+                <div class="alert alert-warning" role="alert">
+                    <i class="fa fa-exclamation-triangle"></i> The campaign configuration should be altered by advanced
+                    users
+                    only. Invalid
+                    values can lead to unexpected behavior.
                 </div>
+                <div class="alert alert-danger" role="alert">
+                    <i class="fa fa-exclamation-triangle"></i> Changing the configuration will erase the collected
+                    annotations.
+                </div>
+                <div id='configarea' class="tab-pane sidepanel-panel mb-3" role="tabpanel" tabindex="0">
+                    {% for key, value in metadata.config.items() %}
+                    <label for="{{ key }}-input">
+                        <b>{{ key }}</b>
+                    </label>
+                    <input type="text" class="form-control campaign-metadata" data-key="{{ key }}" id="{{ key }}-input"
+                        value="{{ value }}">
+                    {% endfor %}
+                </div>
+                <button type="button" class="btn btn-danger update-config-btn"
+                    onclick="updateCampaignConfig('{{ metadata.id }}')">Overwrite
+                    metadata</button>
             </div>
         </div>
     </div>
