--- a/factgenie/templates/crowdsourcing_detail.html
+++ b/factgenie/templates/crowdsourcing_detail.html
@@ -43,8 +43,8 @@
             {% if metadata.status=='idle' %} style="display: none;" {% endif %}>
             <i class="fa fa-download"></i> Download annotations
           </a>
-          <a type="button" class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#config-modal"><i
-              class="fa fa-cog"></i> Show
+          <a type="button" class="btn btn-outline-secondary" data-bs-toggle="modal"
+            data-bs-target="#config-modal-{{ campaign_id }}"><i class="fa fa-cog"></i> Show
             configuration</a>
           <a href="{{ host_prefix }}/analyze/detail?campaign={{ campaign_id }}&source=crowdsourcing" type="button"
             class="btn btn-outline-secondary"><i class="fa fa-area-chart"></i> View statistics</a>
