--- a/factgenie/templates/llm_campaign_detail.html
+++ b/factgenie/templates/llm_campaign_detail.html
@@ -37,18 +37,17 @@
         </dl>
         <div>
           <a onclick="runLLMCampaign('{{ campaign_id }}')" class="btn btn-outline-secondary" data-bs-toggle="tooltip"
-            id="run-button" title="Run" {% if metadata.status=='finished' or metadata.status=='running' %}
-            style="display: none;" {% endif %}>
+            id="run-button-{{ campaign_id }}" title="Run" {% if metadata.status=='finished' or
+            metadata.status=='running' %} style="display: none;" {% endif %}>
             <i class="fa fa-play"></i> Run {% if mode == 'llm_eval' %}evaluation{% else %}generation{% endif %}
           </a>
           <a onclick="pauseLLMCampaign('{{ campaign_id }}')" class="btn btn-outline-secondary" data-bs-toggle="tooltip"
-            id="stop-button" title="Stop evaluation" {% if metadata.status!='running' %} style="display: none;" {% endif
-            %}>
+            id="stop-button-{{ campaign_id }}" title="Stop evaluation" {% if metadata.status!='running' %}
+            style="display: none;" {% endif %}>
             <i class="fa fa-pause"></i> Pause {% if mode == 'llm_eval' %}evaluation{% else %}generation{% endif %}
           </a>
           <a href="{{ host_prefix }}/export_campaign_outputs?campaign={{ campaign_id }}&mode={{ mode }}"
-            class="btn btn-outline-secondary" data-bs-toggle="tooltip" id="download-button" title="Export outputs" {% if
-            metadata.status=='idle' %} style="display: none;" {% endif %}>
+            class="btn btn-outline-secondary" data-bs-toggle="tooltip" id="download-button" title="Export outputs">
             <i class="fa fa-download"></i> Download {% if mode == 'llm_eval' %}annotations{% else %}generated outputs{%
             endif %}
           </a>
@@ -59,18 +58,17 @@
             <i class="fa fa-file-text"></i> Export as model outputs
           </a>
           {% endif %}
-          <a type="button" class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#config-modal"><i
-              class="fa fa-cog"></i> Show
+          <a type="button" class="btn btn-outline-secondary" data-bs-toggle="modal"
+            data-bs-target="#config-modal-{{ metadata.id }}"><i class="fa fa-cog"></i> Show
             configuration</a>
           {% if mode == 'llm_eval' %}
           <a href="{{ host_prefix }}/analyze/detail?campaign={{ campaign_id }}&source={{ mode }}" type="button"
             class="btn btn-outline-secondary"><i class="fa fa-area-chart"></i> View statistics</a>
           {% endif %}
         </div>
-        <div class="progress mt-3" style="display: {{ 'none' if metadata.status != 'running' else block }};"
-          id="llm-progress">
-          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuemin="0"
-            id="llm-progress-bar" aria-valuemax="100"
+        <div class="progress mt-3" id="llm-progress-{{ campaign_id }}">
+          <div class="progress-bar progress-bar-animated" role="progressbar" aria-valuemin="0"
+            id="llm-progress-bar-{{ campaign_id }}" aria-valuemax="100"
             style="width: {{ (finished_examples|length) / (overview | length) * 100 }}%;">
           </div>
         </div>
