--- a/factgenie/templates/manage.html
+++ b/factgenie/templates/manage.html
@@ -96,7 +96,7 @@
                   -
                   {% endif %}
                   {% for ann in dataset.annotations %}
-                  <a class="badge bg-warning text-dark">{{ ann }}</a>
+                  <a class="badge bg-light text-dark">{{ ann }}</a>
                   {% endfor %}
                 </td>
                 <td>
