--- a/factgenie/templates/llm_campaign.html
+++ b/factgenie/templates/llm_campaign.html
@@ -39,26 +39,31 @@
             <tr>
               <th scope="col" data-sortable="true">Id</th>
               <th scope="col" data-sortable="true">Created</th>
+              <th scope="col" data-sortable="true">Type</th>
+              <th scope="col" data-sortable="true">Model</th>
               <th scope="col" data-sortable="true">Status</th>
-              {% if mode == 'llm_eval' %}
+              <!-- {% if mode == 'llm_eval' %}
               <th scope="col" data-width="400">Labels</th>
-              {% endif %}
-              <th scope="col" data-width="50">Progress</th>
-              <th scope="col" data-align="right" data-width="300">Actions</th>
+              {% endif %} -->
+              <th scope="col" data-width="100">Progress</th>
+              <th scope="col" data-align="right" data-width="200">Actions</th>
             </tr>
           </thead>
           <tbody>
             {% for name, campaign in campaigns.items() %}
             <tr>
               {% set metadata = campaign.metadata %}
+              {% set campaign_id = metadata.id %}
               <td><a href="{{ host_prefix }}/llm_campaign/detail?mode={{ mode }}&campaign={{ campaign.metadata.id }}"
                   class="blue-link">{{
                   metadata.id }}</a></td>
               <td>{{ metadata.created }}</td>
-              <td><span class="badge bg-{{ metadata.status }}">{{ metadata.status
+              <td class="small font-monospace">{{ metadata.config.type }}</td>
+              <td class="small font-monospace">{{ metadata.config.model }}</td>
+              <td><span id="metadata-status-{{ campaign_id }}" class="badge bg-{{ metadata.status }}">{{ metadata.status
                   }}</span></td>
-              <!-- <td>{{ campaign.stats }}</td> -->
-              {% if mode == 'llm_eval' %}
+              <!-- <td></td> -->
+              <!-- {% if mode == 'llm_eval' %}
               <td style="padding-right: 1rem !important;">{% for category in metadata.config.annotation_span_categories
                 %}
                 <span class="badge" style="background-color: {{ category.color }}; color: rgb(60, 65, 73); ">{{
@@ -66,8 +71,11 @@
                   }}</span>
                 {% endfor %}
               </td>
-              {% endif %}
-              <td style="padding-right: 1rem !important;">
+              {% endif %} -->
+              <td>
+                <div class="small" id="metadata-example-cnt-{{ campaign_id }}">{{ campaign.stats.finished }} / {{
+                  campaign.stats.total
+                  }}</div>
                 <div class="progress" id="llm-progress-{{ metadata.id }}">
                   <div class="progress-bar progress-bar-animated" role="progressbar" aria-valuemin="0"
                     id="llm-progress-bar-{{ metadata.id }}" aria-valuemax="100"
@@ -86,36 +94,22 @@
                   metadata.status!='running' %} style="display: none;" {% endif %}>
                   <i class="fa fa-pause"></i>
                 </a>
-                <!-- {% if metadata.status=='finished' %}
-                <a class="btn btn-outline-secondary" style="visibility: hidden;"><i class="fa fa-play"></i>
-                </a>
-                {% endif %} -->
-                <a href="{{ host_prefix }}/export_campaign_outputs?campaign={{ metadata.id }}&mode={{ mode }}"
-                  class="btn btn-outline-secondary" data-bs-toggle="tooltip" title="Download results">
+                <a href="{{ host_prefix }}/export_campaign_outputs?mode={{ mode }}&campaign={{ campaign_id }}"
+                  class="btn btn-outline-secondary" data-bs-toggle="tooltip" id="download-button-{{ metadata.id }}"
+                  title="Export annotations" {% if metadata.status!='finished' %} style="display: none;" {% endif %}>
                   <i class="fa fa-download"></i>
                 </a>
-                <a type="button" class="btn btn-outline-secondary" data-bs-toggle="modal"
-                  data-bs-target="#config-modal-{{ metadata.id }}"><i class="fa fa-cog"></i></a>
-                {% if mode == 'llm_eval' %}
-                <a href="{{ host_prefix }}/analyze/detail?campaign={{ metadata.id }}&source={{ mode }}" type="button"
-                  class="btn btn-outline-secondary"><i class="fa fa-area-chart"></i></a>
-                {% endif %}
-                <a type="button" class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#duplicate-eval-modal-{{
+                <a type="button" class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#actions-modal-{{
                   metadata.id }}">
-                  <i class="fa fa-clone"></i>
+                  <i class="fa fa-tasks"></i>
                 </a>
                 <a onclick="deleteCampaign('{{ metadata.id }}', '{{ mode }}')" class="btn btn-outline-danger"
                   data-bs-toggle="tooltip" title="Delete the campaign">
                   <i class="fa fa-trash"></i>
                 </a>
               </td>
-              {% include 'forms/config_modal.html' %}
+              {% include 'forms/actions_modal.html' %}
             </tr>
-            {% if mode == 'llm_gen' %}
-            {% include 'forms/duplicate_gen_modal.html' %}
-            {% else %}
-            {% include 'forms/duplicate_modal.html' %}
-            {% endif %}
             {% endfor %}
           </tbody>
 
@@ -129,6 +123,13 @@
   // variable to be used in factgenie.js
   window.url_prefix = "{{ host_prefix }}";
   window.mode = "{{ mode }}";
+  $(document).ready(function () {
+    {% for name, campaign in campaigns.items() %}
+    if ("{{ campaign.metadata.status }}" == "running") {
+      startLLMCampaignListener("{{ campaign.metadata.id }}");
+    }
+    {% endfor %}
+  });
 </script>
 <script src="{{ host_prefix }}/static/js/factgenie.js"></script>
 <script src="{{ host_prefix }}/static/js/utils.js"></script>
