--- a/factgenie/templates/llm_campaign_detail.html
+++ b/factgenie/templates/llm_campaign_detail.html
@@ -11,12 +11,16 @@
   <script src="{{ host_prefix }}/static/js/jquery.min.js"></script>
   <script src="{{ host_prefix }}/static/js/popper.min.js"></script>
   <script src="{{ host_prefix }}/static/js/bootstrap.min.js"></script>
+
+  <link rel="stylesheet" href="{{ host_prefix }}/static/css/bootstrap-table.min.css">
+  <link rel="stylesheet" href="{{ host_prefix }}/static/css/bootstrap-icons.css">
+  <script src="{{ host_prefix }}/static/js/bootstrap-table.min.js"></script>
 </head>
 
 <body>
   {% include 'navbar.html' %}
 
-  <div class="container w-50 mt-5">
+  <div class="container w-75 mt-5">
 
     <div class="mt-5">
       <a href="{{ host_prefix }}/llm_campaign?mode={{ mode }}" class="btn btn-outline-secondary mb-5">← List of LLM {%
@@ -30,9 +34,12 @@
           <dt class="col-sm-3"> Created </dt>
           <dd class="col-sm-9" id="metadata-created"> {{ metadata.created }} </dd>
           <dt class="col-sm-3"> Status </dt>
-          <dd class="col-sm-9" id="metadata-status"> {{ metadata.status }} </dd>
+          <dd class="col-sm-9"><span id="metadata-status-{{ campaign_id }}" class="badge bg-{{ metadata.status }}">{{
+              metadata.status
+              }}</span> </dd>
           <dt class="col-sm-3"> Examples </dt>
-          <dd class="col-sm-9" id="metadata-example-cnt"> {{ finished_examples | length }} / {{ overview | length }}
+          <dd class="col-sm-9" id="metadata-example-cnt-{{ campaign_id }}"> {{ finished_examples | length }} / {{
+            overview | length }}
           </dd>
         </dl>
         <div>
@@ -47,20 +54,26 @@
             <i class="fa fa-pause"></i> Pause {% if mode == 'llm_eval' %}evaluation{% else %}generation{% endif %}
           </a>
           <a href="{{ host_prefix }}/export_campaign_outputs?campaign={{ campaign_id }}&mode={{ mode }}"
-            class="btn btn-outline-secondary" data-bs-toggle="tooltip" id="download-button" title="Export outputs">
-            <i class="fa fa-download"></i> Download {% if mode == 'llm_eval' %}annotations{% else %}generated outputs{%
+            class="btn btn-outline-secondary" data-bs-toggle="tooltip" id="download-button-{{ metadata.id }}"
+            title="Export outputs">
+            <i class="fa fa-download"></i> Download {% if mode == 'llm_eval' %}annotations{% else %}outputs{%
             endif %}
           </a>
+          <a onclick="clearCampaign('{{campaign_id }}', '{{ mode }}')" class="btn btn-outline-secondary"
+            data-bs-toggle=" tooltip" title="Clear the campaign">
+            <i class="fa fa-recycle"></i> Clear {% if mode == 'llm_eval' %}annotations{% else %}outputs{%
+            endif %}
+          </a>
+          <a type="button" class="btn btn-outline-secondary" data-bs-toggle="modal"
+            data-bs-target="#config-modal-{{ metadata.id }}"><i class="fa fa-cog"></i> Show
+            configuration</a>
           {% if mode == 'llm_gen' %}
           <a type="button" class="btn btn-outline-secondary" data-bs-toggle="modal" id="save-generations-button"
-            data-bs-target="#save-generations-modal" class="btn btn-outline-secondary" title="Export as model outputs">
+            data-bs-target="#save-generations-modal" title="Export as model outputs">
             <!-- print out metadata.status -->
             <i class="fa fa-file-text"></i> Export as model outputs
           </a>
           {% endif %}
-          <a type="button" class="btn btn-outline-secondary" data-bs-toggle="modal"
-            data-bs-target="#config-modal-{{ metadata.id }}"><i class="fa fa-cog"></i> Show
-            configuration</a>
           {% if mode == 'llm_eval' %}
           <a href="{{ host_prefix }}/analyze/detail?campaign={{ campaign_id }}&source={{ mode }}" type="button"
             class="btn btn-outline-secondary"><i class="fa fa-area-chart"></i> View statistics</a>
@@ -81,16 +94,22 @@
         <div id="finished-examples" class="mt-3">
           <h4>Examples</h4>
           <div id="llm-status">
-            <table class="table table-sm table-striped">
+            <table data-toggle="table" data-pagination="true" data-page-size="100" data-pagination-parts="['pageList']"
+              data-detail-view-icon="true" data-search-align="left" data-detail-view="true"
+              data-detail-formatter="detailFormatter" data-searchable="false" data-detail-filter="detailFilter"
+              data-icons='{"detailOpen": "bi-chevron-down", "detailClose": "bi-chevron-up"}'
+              data-classes="table table-sm table-striped table-llm-detail">
               <thead>
                 <tr>
-                  <th scope="col">#</th>
-                  <th scope="col">Dataset</th>
-                  <th scope="col" {% if mode=='llm_gen' %} style="display: none;" {% endif %}>Setup</th>
-                  <th scope="col">Split</th>
-                  <th scope="col">Example</th>
-                  <th scope="col">Status</th>
+                  <th scope="col" data-sortable="true">#</th>
+                  <th scope="col" data-sortable="true">Dataset</th>
+                  {% if mode!='llm_gen' %}<th scope="col" data-sortable="true">Setup
+                  </th>{% endif %}
+                  <th scope="col" data-sortable="true">Split</th>
+                  <th scope="col" data-sortable="true">Example</th>
+                  <th scope="col" data-sortable="true">Status</th>
                   <th scope="col">Actions</th>
+                  <th scope="col" data-visible="false">Output</th>
                 </tr>
               </thead>
               <tbody>
@@ -100,11 +119,11 @@
                 <tr>
                   <td>{{ loop.index }}</td>
                   <td>{{ example.dataset }}</td>
-                  <td {% if mode=='llm_gen' %} style="display: none;" {% endif %}>{{ example.setup_id }}</td>
+                  {% if mode!='llm_gen' %}<td>{{ example.setup_id }}</td> {% endif %}
                   <td>{{ example.split }}</td>
                   <td>{{ example.example_idx }}</td>
 
-                  <td><span class="badge bg-secondary" id="statusBtn{{ rowId }}">{{ example.status }}</span>
+                  <td><span class="badge bg-{{ example.status }}" id="statusBtn{{ rowId }}">{{ example.status }}</span>
                   </td>
                   <!-- use collapse for hiding annotations -->
                   <td>
@@ -113,23 +132,19 @@
                       role="button">
                       <i class="fa fa-eye"></i>
                     </a>
-                    <a class="btn btn-sm btn-outline-secondary" data-bs-toggle="collapse"
-                      href="#collapseExample{{ rowId }}" role="button" aria-expanded="false" id="annotBtn{{ rowId }}"
-                      aria-controls="collapseExample" {% if example.status !="finished" %} style="display: none;" {%
+                    <a class="btn btn-sm btn-outline-secondary"
+                      onclick="clearOutput('{{ metadata.id }}', '{{ mode }}', '{{ example.example_idx }}')"
+                      data-bs-toggle="tooltip" title="Clear outputs" id="clearOutput{{ rowId }}"
+                      aria-controls="collapseExample" {% if example.status !='finished' %} style="display: none;" {%
                       endif %}>
-                      <i class="fa fa-list"></i>
+                      <i class="fa fa-recycle"></i>
                     </a>
                   </td>
-                <tr class="collapse" id="collapseExample{{ rowId }}">
-                  <td colspan="7">
+                  <td style="display: none;">
                     <div class="card card-body">
                       <pre id="annotPre{{ rowId }}">{{ example.output }}</pre>
                     </div>
                   </td>
-                </tr>
-                </tr>
-                <!-- correct striping -->
-                <tr>
                 </tr>
                 {% endfor %}
               </tbody>
