change wording to be more general

--- a/factgenie/templates/campaigns/annotate_body.html
+++ b/factgenie/templates/campaigns/annotate_body.html
@@ -68,7 +68,7 @@
                   {% endfor %}
                 </div>
               </div>
-              <div id='text-type-info' class='mt-3'>Drag your mouse over the text to annotate the selected category:
+              <div id='text-type-info' class='mt-3'>Drag your mouse over the text to highlight the span:
               </div>
               <div id='outputarea'>
               </div>
