Make the annotation buttons more visible

--- a/factgenie/templates/browse.html
+++ b/factgenie/templates/browse.html
@@ -121,8 +121,8 @@
           <div id='sidepanel-content' class="tab-content">
             <div id='setuparea' style="display: none">
               <!-- inline buttons -->
-              <div>
-                <small class="text-muted"><i class="fa fa-pencil"></i> Annotations</small>
+              <div class="mb-1">
+                <small class="text-muted"><i class="fa fa-pencil"></i> Annotations (click to show)</small>
               </div>
               <p class="d-inline-flex gap-1" id="annotations-select">
               </p>
