--- a/factgenie/templates/manage.html
+++ b/factgenie/templates/manage.html
@@ -47,7 +47,7 @@
       <li class="nav-item" role="presentation">
         <a class="nav-link" id="pills-annotations-tab" data-bs-toggle="pill" href="#pills-annotations" role="tab"
           aria-controls="pills-annotations" data-anchor="annotations"><img
-            src="{{ host_prefix }}/static/img/checkmark.png" height="30px" class="heading-img-inline">Annotations</a>
+            src="{{ host_prefix }}/static/img/checkmark.png" height="30px" class="heading-img-inline">Campaigns</a>
       </li>
     </ul>
     <div class="tab-content" id="pills-tabContent">
