--- a/factgenie/templates/analyze.html
+++ b/factgenie/templates/analyze.html
@@ -67,9 +67,13 @@
                   {% endfor %}
                 </td>
                 <td>
-                  {% for status, count in campaign.stats.items() %}
-                  <span class="badge bg-secondary">{{ status }}: {{ count }}</span>
-                  {% endfor %}
+                  {% if campaign.metadata.source == 'llm_eval' or campaign.metadata.source == 'llm_gen' %}
+                  {% include 'forms/progress_bar_llm.html' %}
+                  {% elif campaign.metadata.source == 'crowdsourcing' %}
+                  {% include 'forms/progress_bar_crowdsourcing.html' %}
+                  {% else %}
+                  external
+                  {% endif %}
                 </td>
                 <!-- <td>
                     <a href="{{ host_prefix }}/analyze/detail?campaign={{ campaign.metadata.id }}&source={{ campaign.metadata.source }}"
