--- a/factgenie/templates/navbar.html
+++ b/factgenie/templates/navbar.html
@@ -10,7 +10,7 @@
     style="cursor: pointer; position: absolute; top: 0; right: 0; margin-right: 15px; margin-top:16px; height: 30px;">
 
 
-<a href="https://github.com/kasnerz/factgenie/" target="_blank"
+<a href="https://github.com/ufal/factgenie/" target="_blank"
     style="position: absolute; top: 0; right: 0; margin-right: 60px; margin-top:15px;">
     <img src="{{ host_prefix }}/static/img/github.png" height="30px">
 </a>
