Add text fields as example-level inputs

--- a/factgenie/templates/campaigns/annotate_body.html
+++ b/factgenie/templates/campaigns/annotate_body.html
@@ -78,6 +78,8 @@
               {{ flags | safe }}
 
               {{ options | safe }}
+
+              {{ text_fields | safe }}
               <div class="d-flex align-items-center justify-content-center" id="submit-annotation-box">
                 <div class="btn-group" role="group">
                   <button type="button" class="btn btn-sm btn-success" onclick="markAnnotationAsComplete();">✅ Mark
