--- a/factgenie/templates/crowdsourcing_new.html
+++ b/factgenie/templates/crowdsourcing_new.html
@@ -171,7 +171,7 @@
                   <h2 class="accordion-header" id="headingAdvanced">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                       data-bs-target="#collapseAdvanced" aria-expanded="false" aria-controls="collapseAdvanced">
-                      Advanced
+                      Example-level inputs
                     </button>
                   </h2>
                   <div id="collapseAdvanced" class="accordion-collapse collapse" aria-labelledby="headingAdvanced"
@@ -191,7 +191,7 @@
                           <button type="button" class="btn btn-outline-secondary btn-sm" onclick="addFlag();">+</button>
                         </div>
                       </div>
-                      <div class="row mb-1 align-items-center">
+                      <div class="row mb-3 align-items-center">
                         <div class="col-auto">
                           <i class="fa fa-list-ul"></i>
                           <span style="margin-left: 5px; margin-right: 10px;">List of options</span>
@@ -205,6 +205,23 @@
                           <button type="button" class="btn btn-outline-secondary btn-sm"
                             onclick="addOption();">+</button>
                         </div>
+                        <!-- text fields -->
+                        <div class="row mt-3 mb-1 align-items-center">
+                          <div class="col-auto">
+                            <i class="fa fa-file-text-o"></i>
+                            <span style="margin-left: 5px; margin-right: 10px;">Text fields</span>
+                            <div class="mb-2">
+                              <small class="form-text text-muted">Text fields that the annotators can fill for each
+                                example.</small>
+                            </div>
+                          </div>
+                          <div id="textFields"></div>
+                          <div class="col-auto mt-1">
+                            <button type="button" class="btn btn-outline-secondary btn-sm"
+                              onclick="addTextField();">+</button>
+                          </div>
+                        </div>
+
                       </div>
                     </div>
                   </div>
