Fix: Compute the number of outputs based on available outputs, not the total example count

--- a/factgenie/templates/index.html
+++ b/factgenie/templates/index.html
@@ -80,7 +80,7 @@
               <img src="{{ host_prefix }}/static/img/manage.png" class="intro-img">
               <h5 class="card-title">Manage</h5>
             </a>
-            <p class="card-text">Manage data resources.</p>
+            <p class="card-text">Manage resources.</p>
           </div>
         </div>
       </div>
